--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,16 +12,16 @@ li
     margin-right: 0.5rem;
 }
 
-.outline
-{
-    outline: solid red 1px;
-}
+/*.outline*/
+/*{*/
+/*    outline: solid red 1px;*/
+/*}*/
 
 /* Table */
 .my-custom-scrollbar
 {
     position: relative;
-    height: 500px;
+    max-height: 800px;
     overflow: auto;
 }
 
@@ -50,10 +50,20 @@ li
     margin-bottom: 3rem;
 }
 
+.marg-bot-small
+{
+    margin-bottom: 2rem;
+}
+
 .marg-h
 {
     margin-top: 3rem;
     margin-bottom: 3rem;
+}
+
+.pad-light
+{
+    padding : 0.25rem;
 }
 
 .title--h2
@@ -63,9 +73,24 @@ li
     font-family: 'Dancing Script', cursive;
 }
 
-w-25
+.pad-2
+{
+    padding: 2rem;
+}
+
+.w-25
 {
     width: 25%;
+}
+
+.w-80
+{
+    width: 80%;
+}
+
+.full-vh
+{
+    min-height: 100vh;
 }
 
 /************************************************************************************
@@ -144,6 +169,19 @@ body
 /*************************************************************************************
                 HOME
  ************************************************************************************/
+.bg-home--div
+{
+    /*min-height: 40vh;*/
+    width: 30%;
+    height: auto;
+    display: flex;
+    margin: auto;
+    background-image: url("../img/bloc-bg-home.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .main-content
 {
     display: flex;
@@ -154,6 +192,11 @@ body
 {
     font-family: 'Dancing Script', cursive;
     font-weight: 700;
+}
+
+.title--h2
+{
+    margin: 5% auto auto 10%;
 }
 
 .button-go-chapter
@@ -177,7 +220,7 @@ body
 .link-view-chapter
 {
     font-style: italic;
-    width: 15%;
+    /*width: 15%;*/
 }
 
 .chapter--article
@@ -185,6 +228,16 @@ body
     border-radius: 0 0 10px 10px;
     margin-top: 2rem;
     padding: 1rem;
+}
+
+
+/************************************************************************************
+                Post view
+ ***********************************************************************************/
+.comment-head--div
+{
+    /*justify-content: space-between;*/
+    outline: solid red;
 }
 
 /***********************************************************************************
@@ -202,21 +255,52 @@ body
 
 .dashboard_stats--li
 {
-    width: 10rem;
-    height: 10rem;
+    width: 12rem;
+    height: 12rem;
     padding: 4rem;
     border-radius : 50%;
 }
 
+.stats-number
+{
+    font-size: 3rem;
+}
 
 /*****************************************************************************************************************************************************************
                         RESPONSIVE
  ****************************************************************************************************************************************************************/
-@media screen and (max-width: 400px)
+@media only screen and (max-width: 400px)
 {
+    *
+    {
+        font-size: 1rem;
+    }
+
     .header_title--h1
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        outline: solid blue;
+    }
+
+    .header_title--h1 > *
     {
         font-size: 1rem !important;
     }
 
+    .wellcome-blog--h1
+    {
+        font-size: 1.5rem;
+    }
+
+    .title--h2
+    {
+        font-size: 1.25rem;
+    }
+
+    .btn
+    {
+        font-size: 1rem;
+    }
 }
